Use Android-compatible Files APIs for settings read/write